ncmpcpp colors & style, doom modeline changes

--- a/emacs/.config/doom/config.org
+++ b/emacs/.config/doom/config.org
@@ -41,6 +41,11 @@ There are two ways to load a theme. Both assume the theme is installed and avail
 (setq doom-theme 'doom-dark+)
 (setq doom-modeline-github t)
 (setq all-the-icons-color-icons t)
+(setq doom-modeline-icon (display-graphic-p))
+(setq doom-modeline-buffer-modification-icon t)
+(setq doom-modeline-major-mode-icon t)
+(setq doom-modeline-major-mode-color-icon t)
+(setq doom-modeline-buffer-encoding t)
 (nyan-mode)
 (parrot-mode)
 #+END_SRC
