--- a/emacs/.config/doom/config.org
+++ b/emacs/.config/doom/config.org
@@ -16,6 +16,7 @@
     - [[#clojure-cookbook][Clojure cookbook]]
     - [[#tree-sitter][tree-sitter]]
     - [[#set-online-judge-directory][set online-judge directory]]
+    - [[#discord-rpc][Discord RPC]]
 
 * Configuration
 ** General config
@@ -46,8 +47,8 @@ There are two ways to load a theme. Both assume the theme is installed and avail
 (setq doom-modeline-major-mode-icon t)
 (setq doom-modeline-major-mode-color-icon t)
 (setq doom-modeline-buffer-encoding t)
-(nyan-mode)
 (parrot-mode)
+(load "~/.config/doom/splash")
 #+END_SRC
 *** Relative line numbers
 #+BEGIN_SRC emacs-lisp
@@ -60,10 +61,10 @@ Variables accept either a font-spec, font string ("Input Mono-12"), or xlfd font
 ;      doom-variable-pitch-font (font-spec :family "sans" :size 13))
 
 (setq doom-font (font-spec :family "JetBrains Mono" :size 14)
-      doom-variable-pitch-font (font-spec :family "Fira Sans" :size 15 :style "Regular")
+      doom-variable-pitch-font (font-spec :family "Overpass" :size 15)
       doom-unicode-font (font-spec :family "FontAwesome 5 Free" :size 12)
-      doom-serif-font (font-spec :family "C059" :size 15 :style "Roman")
-      doom-big-font (font-spec :family "Fira Sans" :size 19))
+      doom-serif-font (font-spec :family "IBM Plex Mono" :weight 'light)
+      doom-big-font (font-spec :family "JetBrains Mono" :size 19))
 #+END_SRC
 
 
@@ -130,6 +131,10 @@ Variables accept either a font-spec, font string ("Input Mono-12"), or xlfd font
                             (user-mail-address            . ,(college-mail))
                             (smtpmail-smtp-user           . ,(college-mail))))))))
 #+END_SRC
+
+#+RESULTS:
+: t
+
 Create org-mode tasks with links to emails
 #+BEGIN_SRC emacs-lisp
 (require 'org-mu4e)
@@ -193,4 +198,9 @@ the next chapter, open Dired so you can find it manually."
 #+BEGIN_SRC emacs-lisp
 ;(use-package dap-gdb-lldb
 ;  :config (dap-gdb-lldb-setup))
+#+END_SRC
+*** Discord RPC
+#+BEGIN_SRC emacs-lisp
+(require 'elcord)
+(elcord-mode)
 #+END_SRC
